# wgsls_editor

./: .gitignore  .gitignore.temprs_note  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  IMAGE_TEXTURE_USAGE.md  LOGGING.md  README.md  build_windows.sh  shader.json  test_wrong_uniforms.wgsl
.TMRS/: PIPELINE_SPEC.md  README.md  SETUP.md
TempRS/src/utils/: shader_constants.rs
data/: wgsl_builtins.json
ideas/: Cargo.toml  splash_bg.wgsl  track_metadata_bg.wgsl
ideas/shader_dark_theme/: theme.rs
ideas/src/: app_state.rs  credentials.example.rs  main.rs
ideas/src/api/: activities.rs  likes.rs  mod.rs  playlists.rs  search.rs  tracks.rs  users.rs
ideas/src/app/: mod.rs  player_app.rs  playlists.rs  queue.rs
ideas/src/data/: home_data.rs  mod.rs
ideas/src/models/: activity.rs  mod.rs  playlist.rs  responses.rs  track.rs  user.rs
ideas/src/screens/: history.rs  likes.rs  mod.rs  now_playing.rs  splash.rs  suggestions.rs  user_playlists.rs
ideas/src/screens/home/: mod.rs  recently_played.rs  recommendations.rs  suggestions.rs
ideas/src/screens/search/: mod.rs  playlists.rs  tracks.rs
ideas/src/shaders/: converted_test.wgsl  plasma.wgsl  track_metadata_bg_ncs.wgsl.backup
ideas/src/ui_components/: colors.rs  header.rs  helpers.rs  icons.rs  layout.rs  mod.rs  player.rs  playlist_sidebar.rs  search_bar.rs  toast.rs
ideas/src/utils/: artwork.rs  audio_analyzer.rs  audio_controller.rs  audio_fft.rs  cache.rs  clipboard.rs  fingerprint.rs  formatting.rs  http.rs  mediaplay.rs  mod.rs  oauth.rs  playback_history.rs  shader.rs  token_helper.rs  token_store.rs  track_filter.rs
ideas/testunits/: README.md  play_history_test.rs  shader_test.rs  shadertoy_converter.rs
src/: autocomplete.rs  main.rs  shader_pipeline.rs  theme.rs  toast.rs  wgsl_highlight.rs
src/assets/shards/: README.md  RGBA_DEMO_README.md  buffer_a_demo.frag  buffer_b_demo.frag  buffer_c_demo.frag  buffer_d_demo.frag  default.frag  default.json  default.vert  demo_buffers.frag  demo_main.frag  test.frag  (+21 more)
src/compiler/: compiler.rs  mod.rs
src/funcs/: audio.rs  mod.rs
src/screens/: editor.rs  mod.rs  shader_buffer.rs
src/ui_components/: mod.rs  settings_menu.rs  shader_editor.rs  shader_properties.rs
src/utils/: audio.rs  audio_analyzer.rs  audio_file.rs  errors.rs  fonts.rs  image_loader.rs  mod.rs  monitors.rs  multi_buffer_pipeline.rs  notification.rs  panic_handler.rs  pipeline.rs  shader_constants.rs  shader_json.rs  shader_validator.rs  text.rs  theme.rs  toast.rs  wgsl_syntax.rs
(+8 files in other folders)
