[package]
name = "egui_two_windows"
version = "0.1.0"
edition = "2021"

[dependencies]
# enable eframe's wgpu renderer
eframe = { version = "0.23", features = ["wgpu"] }
egui-wgpu = "0.23"
bytemuck = "1.16"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4"
env_logger = "0.10"
type-map = "0.4"
regex = "1.10"

[features]
default = []
code_editor = ["egui-code-editor"]

[dependencies.egui-code-editor]
package = "egui-code-editor"
version = "0.2"
optional = true
