[package]
name = "webshard_editor"
version = "0.1.0"
edition = "2021"
default-run = "webshard_editor"

[dependencies]
# eframe/egui latest compatible with code editor
eframe = { version = "0.33", features = ["wgpu"] }
egui-wgpu = "0.33"
bytemuck = "1.16"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4"
env_logger = "0.10"
type-map = "0.4"
regex = "1.10"
cpal = "0.15"
rustfft = "6.2"
naga = { version = "27", features = ["wgsl-in"] }
rodio = "0.17"

[features]
default = ["code_editor"]
code_editor = ["egui_code_editor"]

[dependencies.egui_code_editor]
version = "0.2.20"
optional = true
