[package]
name = "TempRS"
version = "0.2.0"
edition = "2021"
description = "SoundCloud Desktop Player - Modern music streaming client for SoundCloud"
authors = ["nobus"]
license = "MIT"
repository = "https://github.com/nobus/TempRS"

[dependencies]
base64 = "0.22.1"
rand = "0.9.2"
sha2 = "0.10"
rusqlite = { version = "0.32", features = ["bundled"] }
aes-gcm = "0.10"
eframe = { version = "0.33", features = ["wgpu"] }
egui = "0.33"
image = "0.25"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dirs = "5.0"
reqwest = { version = "0.12", features = ["json", "blocking", "stream"] }
urlencoding = "2.1"
tokio = { version = "1.43", features = ["full"] }
tiny_http = "0.12"
webbrowser = "1.0"
rodio = "0.19"
minimp3 = "0.5"
futures-util = "0.3"
once_cell = "1.20"
log = "0.4"
env_logger = "0.11"
egui-wgpu = "0.33"
bytemuck = { version = "1.14", features = ["derive"] }
arboard = "3.4"
rustfft = "6.2"

[target.'cfg(windows)'.dependencies]
winreg = "0.55.0"

[[bin]]
name = "TempRS"
path = "src/main.rs"

[[bin]]
name = "play_history_test"
path = "testunits/play_history_test.rs"

[[bin]]
name = "shader_test"
path = "testunits/shader_test.rs"

[[bin]]
name = "shadertoy_converter"
path = "testunits/shadertoy_converter.rs"